fixed wrapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,10 @@ body {
   margin: 0.5em 0;
 }
 
+.list {
+  flex-wrap: wrap;
+}
+
 .char {
   margin-right: 1em;
   margin-bottom: 1.5em;
